syntax = "proto3";

package calculator;

option go_package = "grpc-go/calculator/proto";

message SumRequest {
    int32 number_1 = 1;
    int32 number_2 = 2;
}

message SumResponse {
    int32 result_number = 1;
}